--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "2do-desafio-ricciardone-tomas",
   "version": "1.0.0",
   "description": "",
-  "main": "product_manager.js",
+  "main": "products.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "ws": "^8.17.0"
   }
 }
